@@ -1,6 +1,150 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <window>
+	<defaultcontrol always="true">6</defaultcontrol>
+	<include>dialogeffect</include>
 	<controls>
-		<!-- ADDED BY GADE! -->
+		<control type="group">
+			<left>280</left>
+			<top>28</top>
+			<control type="image">
+				<width>720</width>
+				<height>664</height>
+				<colordiffuse>EEFFFFFF</colordiffuse>
+				<texture border="50,100,50,50">dialogs/Dialog.png</texture>
+			</control>
+			<control type="label" id="1">
+				<description>heading label</description>
+				<left>50</left>
+				<top>50</top>
+				<width>620</width>
+				<height>30</height>
+				<align>center</align>
+				<aligny>center</aligny>
+				<font>font16</font>
+				<textcolor>orange</textcolor>
+			</control>
+			<control type="label">
+				<left>50</left>
+				<top>105</top>
+				<width>620</width>
+				<height>30</height>
+				<align>center</align>
+				<aligny>center</aligny>
+				<font>font10</font>
+				<scroll>true</scroll>
+				<textcolor>grey2</textcolor>
+				<label>$INFO[Container(6).ListItem.Label,,  -  ]$INFO[Container(6).ListItem.Label2,#,]</label>
+			</control>
+			<control type="panel" id="6">
+				<left>50</left>
+				<top>145</top>
+				<width>620</width>
+				<height>422</height>
+				<onleft>9011</onleft>
+				<onright condition="Control.IsVisible(60)">60</onright>
+				<onright condition="!Control.IsVisible(60)">9011</onright>
+				<onup>9011</onup>
+				<ondown>9011</ondown>
+				<scrolltime>200</scrolltime>
+				<pagecontrol>60</pagecontrol>
+				<orientation>vertical</orientation>
+				<itemlayout height="60" width="88">
+					<control type="image">
+						<top>5</top>
+						<left>5</left>
+						<width>82</width>
+						<height>54</height>
+						<texture border="10">buttons/button-dialog-nofocus.png</texture>
+					</control>
+					<control type="image">
+						<top>5</top>
+						<left>5</left>
+						<width>82</width>
+						<height>54</height>
+						<texture border="10">white.png</texture>
+						<colordiffuse>$INFO[ListItem.Label2]</colordiffuse>
+					</control>
+				</itemlayout>
+				<focusedlayout height="60" width="88">
+					<control type="image">
+						<top>-1</top>
+						<width>92</width>
+						<height>66</height>
+						<texture border="10">buttons/button-dialog-focus.png</texture>
+					</control>
+					<control type="image">
+						<top>5</top>
+						<left>5</left>
+						<width>82</width>
+						<height>54</height>
+						<texture border="10">color-bg.png</texture>
+					</control>
+					<control type="image">
+						<top>5</top>
+						<left>5</left>
+						<width>82</width>
+						<height>54</height>
+						<texture border="10">white.png</texture>
+						<colordiffuse>$INFO[ListItem.Label2]</colordiffuse>
+					</control>
+				</focusedlayout>
+			</control>
+			<control type="button" id="9011">
+				<left>50</left>
+				<top>571</top>
+				<label>15067</label>
+				<include>DialogButton2CommonValues</include>
+				<font>font12</font>
+				<onclick>PreviousMenu</onclick>
+				<onright condition="Control.IsVisible(60)">60</onright>
+				<onright condition="!Control.IsVisible(60)">6</onright>
+				<onleft>6</onleft>
+				<ondown>6</ondown>
+				<onup>6</onup>
+				<animation effect="slide" end="210,0" condition="!Control.IsVisible(60)">Conditional</animation>
+			</control>
+			<control type="spincontrol" id="60">
+				<description>Next page Spinner</description>
+				<left>608</left>
+				<top>578</top>
+				<subtype>page</subtype>
+				<font />
+				<onleft>9011</onleft>
+				<onright>6</onright>
+				<onup>6</onup>
+				<ondown>6</ondown>
+				<textcolor>white</textcolor>
+				<showonepage>true</showonepage>
+				<visible>Container(6).HasNext | Container(6).HasPrevious</visible>
+			</control>
+			<control type="label">
+				<description>number of files/pages in list text label</description>
+				<left>283</left>
+				<top>576</top>
+				<width>320</width>
+				<height>35</height>
+				<font>font12</font>
+				<align>right</align>
+				<aligny>center</aligny>
+				<scroll>true</scroll>
+				<textcolor>grey2</textcolor>
+				<label>$LOCALIZE[31201] $INFO[Container(6).CurrentPage]/$INFO[Container(6).NumPages]</label>
+				<visible>Control.IsVisible(60) + !Control.HasFocus(60)</visible>
+			</control>
+			<control type="label">
+				<description>number of files/pages in list text label focus</description>
+				<left>283</left>
+				<top>576</top>
+				<width>320</width>
+				<height>35</height>
+				<font>font12</font>
+				<align>right</align>
+				<aligny>center</aligny>
+				<scroll>true</scroll>
+				<textcolor>orange</textcolor>
+				<label>$LOCALIZE[31201] $INFO[Container(6).CurrentPage]/$INFO[Container(6).NumPages]</label>
+				<visible>Control.IsVisible(60) + Control.HasFocus(60)</visible>
+			</control>
+		</control>
 	</controls>
 </window>
